--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
+      .avatar {
+        border-radius: 50%;
+        opacity: 0.9;
+      }
       .header {
         background-color: #ffffff;
         text-align: left;
@@ -16,11 +20,6 @@
         width: 100%;
         height: 100px;
         border-bottom: 1px solid lightgrey
-      }
-      .searchBar{
-        position: absolute;
-        top: 40px;
-        left: 50%;
       }
       .body{
         height: 1000px;
