--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
+      .avatar{
+        object-fit: cover;
+      }
+      .avatar:hover{
+        cursor: pointer;
+      }
       .image-box {
         margin: auto;
         overflow: hidden;
@@ -23,20 +29,6 @@
       .image-box:hover img {
         transform: scale(1.2);
       }   
-      .avatar {
-        border-radius: 50%;
-        opacity: 0.9;
-      }
-      .header {
-        background-color: #ffffff;
-        text-align: left;
-        padding-left: 20px;
-        position : fixed;
-        top: 0;
-        width: 100%;
-        height: 100px;
-        border-bottom: 1px solid lightgrey
-      }
       .body{
         height: 1000px;
         padding-top: 100px;
@@ -50,35 +42,28 @@
       .footer {
         border-top: 1px solid lightgrey
       }
-      h1{
-        font-family:Arial;
-      }
-      img{
-        <!--margin-right: 40px;-->
-      }
-      .login{
-        position: absolute;
-        top: 0px;
-        right: 0px;
-      }
       .nav{
-        background-color:transparent;
-        border-radius:20px;
-        border:0px solid;
         display:inline-block;
-        cursor:pointer;
-        color:#ffffff;
-        font-family:Arial;
-        font-size:17px;
-        padding:5px 10px;
+        font-size:15px;
+        cursor: pointer;
+        padding:5px 5px;
         text-decoration:none;
-      }
-      .nav:hover{
-          color: #FFC300;
       }
     </style>
   </head>
   <body>
-      <script>var app = Elm.Main.init();</script>
+      <script>
+        //the following part is focused on local storage manipulation through ports
+        var key = "user"
+        var flags = localStorage.getItem(key)
+        var app = Elm.Main.init({flags : flags});
+        app.ports.storeToken.subscribe(function(value) {
+          if(value == null)
+            localStorage.removeItem(key)
+          else
+            localStorage.setItem(key, value)
+        })
+      </script>
+
   </body>
 </html>
