--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
+      .social:hover{
+        opacity: 0.8;
+        transform: translateY(-5px);
+      }
       .avatar{
         object-fit: cover;
       }
       .avatar:hover{
         cursor: pointer;
+        opacity: 0.7;
       }
       .image-box {
         margin: auto;
