changes to carousel + first version of image upload

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/favicon/favicon-16x16.png">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
+      .panel-default > .panel-footer {
+        background: "black";
+        color: "white";
+      }
       .social:hover{
         opacity: 0.8;
         transform: translateY(-5px);
@@ -36,7 +40,7 @@
         transform: scale(1.2);
       }   
       .body{
-        height: 1000px;
+        min-height: 1000px;
         padding-top: 100px;
         text-align: center;
         color: black;
