Added tags + server side image saving

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/favicon/favicon-16x16.png">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
-      .panel-default > .panel-footer {
-        background: "black";
-        color: "white";
+      .panel-default > .panel-heading {
+        
       }
       .social:hover{
         opacity: 0.8;
