Added users subpage + query options

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/favicon/favicon-16x16.png">
     <script type="text/javascript" src="/elm.js"></script>
     <style>
-      .panel-default > .panel-heading {
-        
+      .preview:hover{
+        text-decoration: none;
+        opacity: 0.7
+      }
+      .previewAvatar{
+        object-fit: cover;
+      }
+      .image{
+        box-shadow: inset 0 7px 9px -7px rgba(0,0,0,0.7);
+        box-shadow: inset 0 -7px 9px -7px rgba(0,0,0,0.7);
       }
       .social:hover{
         opacity: 0.8;
