--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
         padding:5px 5px;
         text-decoration:none;
       }
+      .dot {
+        height: 15px;
+        width: 15px;
+        border: 0.5px solid lightgrey;
+        border-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+      }
     </style>
   </head>
   <body>
