--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
         var app = Elm.Main.init({flags : flags});
 
         app.ports.storeToken.subscribe(function(value){
-          if(value == null){
+          if(value === null){
             localStorage.removeItem(key)
             sessionStorage.removeItem("queryState")
           }
-          else
+          else{
             localStorage.setItem(key, value)
+          }
         })
 
         //trying saving query state using session storage...
@@ -81,14 +82,14 @@
           if(value.query.length === 0){
             sessionStorage.removeItem("queryState")
           }
-          else
+          else{
             sessionStorage.setItem("queryState", JSON.stringify(value))
+          }
         })
 
         app.ports.request.subscribe(() => {
           app.ports.restoreState.send(JSON.parse(sessionStorage.getItem("queryState")))   
         })
-
       </script>
   </body>
 </html>
